final code before Prayogam.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>FeedConnect &mdash; About Us</title>
+	<title>Feeders Connect &mdash; About Us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	
@@ -30,33 +30,27 @@
 		<div id="fh5co-wrapper">
 			<div id="fh5co-page">
 			
-			<header id="fh5co-header-section" class="sticky-banner">
-				<div class="container">
-					<div class="nav-header">
-						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<h1 id="fh5co-logo"><a href="index.html">FeedConnect</a></h1>
-						<!-- START #fh5co-menu-wrap -->
-						<nav id="fh5co-menu-wrap" role="navigation">
-							<ul class="sf-menu" id="fh5co-primary-menu">
-								<li class="active">
-									<a href="index.html"style="font-size:21px">Home</a>
-								</li>
-								<li>
-									<a href="#" class="fh5co-sub-ddown"style="font-size:21px">Get Involved</a>
-									<ul class="fh5co-sub-menu">
-										<li><a href="#"style="font-size:21px">Donate</a></li>
-										<li><a href="#"style="font-size:21px">Campaign</a></li>
-										<li><a href="#"style="font-size:21px">Volunteer</a></li>
-									</ul>
-								</li>
-	
-								<li><a href="about.html"style="font-size:21px">About</a></li>
-								<li><a href="contact.html"style="font-size:21px">Contact</a></li>
-							</ul>
-						</nav>
+				<header id="fh5co-header-section" class="sticky-banner">
+					<div class="container">
+						<div class="nav-header">
+							<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+							<!-- <img src="WhatsApp Image 2025-04-02 at 10.15.20_b03e4785.jpg" alt="" style="width: 20px; height: 20px;"> -->
+							<h1 id="fh5co-logo"><a href="index.html">Feeders Connect</a></h1>
+							<!-- START #fh5co-menu-wrap -->
+							<nav id="fh5co-menu-wrap" role="navigation">
+								<ul class="sf-menu" id="fh5co-primary-menu">
+									<li class="active">
+										<a href="index.html" style="font-size:21px">Home</a>
+									</li>
+									<li><a href="volunteer.html" style="font-size:21px">Volunteer</a></li>
+									<li><a href="about.html" style="font-size:21px">About</a></li>
+									<li><a href="contact.php" style="font-size:21px">Contact</a></li>
+								</ul>
+							</nav>
+						</div>
 					</div>
-				</div>
-			</header>
+				</header>
+		
 			
 		
 
@@ -95,7 +89,7 @@
 							<div>
 								<h3>Kshitij Soni</h3>
 								<p><span>Developer</span></p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In est eos quo.</p>
+								<p>I am a dedicated student from Poornima University, pursuing BCA in Cyber Security. With a passion for innovation and digital safety, I create secure solutions to tackle cybersecurity challenges. Through my academic journey and projects, I aim to contribute to a safer digital future with creativity and ethical practices.</p>
 							</div>
 							
 							<p class="fh5co-social-icons">
@@ -114,7 +108,7 @@
 							<div>
 								<h3>Mohit Kumar</h3>
 								<p><span>Developer</span></p>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, porro. Fuga, eligendi?</p>
+								<p>I am a dedicated student from Poornima University, pursuing BCA in Cyber Security. With a passion for innovation and digital safety, I create secure solutions to tackle cybersecurity challenges. Through my academic journey and projects, I aim to contribute to a safer digital future with creativity and ethical practices.</p>
 							</div>
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -148,7 +142,7 @@
 							<div>
 								<h3>Nabh Jain</h3>
 								<p><span>Developer</span></p>
-								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum hic vitae nobis!</p>
+								<p>I am a dedicated student from Poornima University, pursuing BCA in Cyber Security. With a passion for innovation and digital safety, I create secure solutions to tackle cybersecurity challenges. Through my academic journey and projects, I aim to contribute to a safer digital future with creativity and ethical practices.</p>
 							</div>
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
